@@ -146,7 +146,8 @@ class automate_reader
         size = (size*10)+(c-'0');
         read(&c, 1);
       }
-    E(c == ':', F("Bad input to automate stdio"));
+    E(c == ':',
+        F("Bad input to automate stdio: expected ':' after string size"));
     char *str = new char[size];
     size_t got = 0;
     while(got < size)
@@ -166,7 +167,7 @@ class automate_reader
     rv = ::read(0, buf, nbytes);
 
     E(rv >= 0, F("read from client failed with error code: %d") % rv);
-    E(eof_ok || rv > 0, F("Bad input to automate stdio (unexpected EOF)"));
+    E(eof_ok || rv > 0, F("Bad input to automate stdio: unexpected EOF"));
     return rv;
   }
   void go_to_next_item()
@@ -192,7 +193,9 @@ class automate_reader
       {
       case 'o': loc = opt; break;
       case 'l': loc = cmd; break;
-      default: E(false, F("Bad input to automate stdio"));
+      default:
+        E(false, 
+            F("Bad input to automate stdio: unknown start token '%c'") % c);
       }
   }
 public:
@@ -214,7 +217,7 @@ public:
           params.push_back(make_pair(key, val));
         go_to_next_item();
       }
-    E(loc == cmd, F("Bad input to automate stdio"));
+    E(loc == cmd, F("Bad input to automate stdio: expected '%c' token") % cmd);
     string item;
     while (get_string(item))
       {
@@ -337,7 +340,8 @@ AUTOMATE(stdio, "", options::opts::automate_stdio_size)
       utf8 cmd;
       vector<utf8> args;
       vector<string>::iterator i = cmdline.begin();
-      E(i != cmdline.end(), F("Bad input to automate stdio"));
+      E(i != cmdline.end(),
+        F("Bad input to automate stdio: command name is missing"));
       cmd = utf8(*i);
       for (++i; i != cmdline.end(); ++i)
         {
